--- a/styles.css
+++ b/styles.css
@@ -54,10 +54,6 @@ header {
     margin: 20px;
 }
 
-.image {
-    
-}
-
 #avatar {
     object-fit: cover;
   max-width: 500px;
@@ -75,4 +71,70 @@ header {
     font-size: 30px;
     padding: 40px;
     font-weight: 600;
+}
+
+h1 {
+    text-align: center;
+    font-size: 40px;
+    padding-top: 30px;
+}
+
+.cards {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin: 20px auto;
+    max-width: 1080px;
+   
+}
+
+.card {
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+    overflow-wrap: break-word;
+    max-width: 300px;
+}
+
+.card-title {
+    font-weight: bold;
+    font-size: 30px;
+    margin: 20px 0 20px 0;
+}
+
+.card-description {
+    font-size: 16px;
+}
+
+.about-me {
+    margin: 40px;
+    background-color: white;
+    max-width: 800px;
+    margin: 0 auto;
+    border-radius: 10px;
+    color: rgb(35, 2, 35);
+    padding: 50px;
+    font-weight: 600;
+    font-size: 20px;
+}
+
+form {
+    margin: 0 auto;
+    max-width: 450px;
+}
+form div input {
+    border-radius: 30px;
+    padding: 15px;
+    font-size: 20px;
+    border: 1px solid black;
+}
+
+form div label {
+    font-size: 25px;
+    font-weight: 400;
+    padding-right: 50px;
+}
+
+.form-input {
+    paddi: 50px;
 }
