--- a/styles.css
+++ b/styles.css
@@ -214,6 +214,15 @@
         cursor: pointer;
         margin: 15px;
     }
+
+    .card-body a {
+        color: blue;
+        text-decoration: none;
+    }
+
+    .card-body   {    
+        color:rgb(158, 158, 216);
+    }
     
     .error_msg {
         padding: 10px;
@@ -276,7 +285,20 @@
         padding: 50px;
         color: rgb(46, 4, 46);
        font-weight: 500;
-       
+    }
+
+    .card-body a {
+        color: blue ;
+        text-decoration: none ;
+    }
+
+    .card-body a:hover {
+        color:blueviolet ;
+    }
+
+    .achievements {
+        background-color: white !important;
+        border: 1px solid white;
     }
     
     .intro {
@@ -539,6 +561,15 @@
         padding: 20px;
         overflow-wrap: break-word;
         max-width: 300px;
+    }
+
+    .card-body a {
+        color: blue ;
+        text-decoration: none ;
+    }
+
+    .card-body a:hover {
+        color:blueviolet;
     }
     
     .card-title {
